--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 "*.pdf filter=lfs diff=lfs merge=lfs -text" 
 "*.zip filter=lfs diff=lfs merge=lfs -text" 
+packages/MongoDB.Libmongocrypt.1.8.0/MongoDB.Libmongocrypt.1.8.0.nupkg filter=lfs diff=lfs merge=lfs -text
